Added new prefix commands, modified link implementation
- Added descriptions to PrefixCommand interface and implemented in commands
- Updated HelpCommand to display commands with their descriptions
- Introduced ModalSubmitListener to handle agenda and minutes input
- Refactored LinksInputButtonListener from older ButtonListener class to display a modal for user input
- Adjusted Meeting class for a single button link interface
- Modified MeetingManager to handle events created within a week and still send out reminders
- Updated application.yaml for configuration fields such as channel ID
- Restructured packages for better organization

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,9 @@ spring:
   discord:
     token: ${DISCORD_TOKEN}
     server-id: ${DISCORD_SERVER_ID}
+    officer-channel-id: ${DISCORD_CHANNEL_ID}
+    zone-id: ${ZONE_ID:America/Los_Angeles}
+    scheduling: 0 0 9 * * ?
   h2:
     console:
       enabled: true
