--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,14 @@
     <groupId>club.sdcs</groupId>
     <artifactId>DiscordClubBot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>SDCSDiscordBot</name>
     <description>SDCSDiscordBot</description>
+    <modules>
+        <module>Common</module>
+        <module>MeetingBot</module>
+        <module>MembershipBot</module>
+    </modules>
     <properties>
         <java.version>21</java.version>
     </properties>
