Refactored MembershipService + application.yaml -Now checks for all users instead of just active -Added to application.yaml -> discord.active.condition.num-meetings-attend and discord.active.condition.in-past-num-days (readjusted MembershipService isActiveVoter boolean to follow this)

--- a/Common/src/main/resources/application.yaml
+++ b/Common/src/main/resources/application.yaml
@@ -12,6 +12,12 @@ spring:
     officer-channel-id: ${DISCORD_CHANNEL_ID}
     zone-id: ${ZONE_ID:America/Los_Angeles}
     scheduling: 0 0 9 * * ?
+    active:
+      check:
+        schedule: 0 0 9 * * ?
+      condition:
+        num-meetings-attended: 1
+        in-past-num-days: 30
   h2:
     console:
       enabled: true
