--- a/Common/src/main/resources/application.yaml
+++ b/Common/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: DiscordClubBot
   datasource:
-    url: jdbc:h2:file:./sdcs;DB_CLOSE_ON_EXIT=FALSE;
+    url: jdbc:h2:file:./sdcs;AUTO_SERVER=TRUE;
     username: ${DB_USER:sdcs}
     password: ${DB_PASSWORD:sdcs2024}
     driver-class-name: org.h2.Driver
@@ -18,6 +18,8 @@ spring:
       condition:
         num-meetings-attended: 1
         in-past-num-days: 30
+    self-nomination:
+      img-url: https://upload.wikimedia.org/wikipedia/commons/4/42/Shrug.jpg
   h2:
     console:
       enabled: true
