allow snapshots in releases for now, since the Discord4J latest release does not include Polls required for voting

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
                 <configuration>
                     <noDeploy>true</noDeploy>
                     <allowUntracked>true</allowUntracked>
+                    <allowSnapshots>true</allowSnapshots>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <pushFeatures>true</pushFeatures>
                     <pushReleases>true</pushReleases>
