--- a/MeetingBot/pom.xml
+++ b/MeetingBot/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>club.sdcs</groupId>
         <artifactId>DiscordClubBot</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>MeetingBot</artifactId>
