--- a/MeetingBot/src/main/resources/application.yaml
+++ b/MeetingBot/src/main/resources/application.yaml
@@ -1,29 +1,19 @@
 spring:
   application:
-    name: DiscordClubBot
+    name: MeetingBot
   datasource:
-    url: jdbc:h2:file:./sdcs;AUTO_SERVER=TRUE;
-    username: ${DB_USER:sdcs}
+    url: jdbc:mariadb://localhost:3306/discordclubbot
+    username: ${DB_USER:meetingbot}
     password: ${DB_PASSWORD:sdcs2024}
-    driver-class-name: org.h2.Driver
+    driver-class-name: org.mariadb.jdbc.Driver
   discord:
     token: ${DISCORD_TOKEN}
     server-id: ${DISCORD_SERVER_ID}
     officer-channel-id: ${DISCORD_CHANNEL_ID}
     zone-id: ${ZONE_ID:America/Los_Angeles}
     scheduling: 0 0 9 * * ?
-    active:
-      check:
-        schedule: 0 0 9 * * ?
-      condition:
-        num-meetings-attended: 1
-        in-past-num-days: 30
     self-nomination:
       img-url: https://i.imgflip.com/1hhv9m.jpg?a478296
-  h2:
-    console:
-      enabled: true
-    port: 9092
   jpa:
     show-sql: true
     hibernate:
