--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>club.sdcs</groupId>
         <artifactId>DiscordClubBot</artifactId>
-        <version>1.0.4-SNAPSHOT</version>
+        <version>1.0.4</version>
     </parent>
 
     <artifactId>Common</artifactId>
