--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>club.sdcs</groupId>
     <artifactId>DiscordClubBot</artifactId>
-    <version>1.0.5-SNAPSHOT</version>
+    <version>1.0.4</version>
     <packaging>pom</packaging>
     <name>SDCSDiscordBot</name>
     <description>SDCSDiscordBot</description>
